--- a/javascript/views/index.pug
+++ b/javascript/views/index.pug
@@ -12,7 +12,7 @@
     link(rel="stylesheet", href="style.css")
     <title>Educate yourself</title>
     style
-      include ./style.css
+      include style.css
     //- style  
     //-   include ../style.css
     //- style
